mutants.out.old/log/src__crossencoder.rs_line_69_col_5.log

*** src/crossencoder.rs:69:5: replace refine -> Vec<(I, Score)> with vec![(Default::default(), Default::default())]

*** mutation diff:
--- src/crossencoder.rs
+++ replace refine -> Vec<(I, Score)> with vec![(Default::default(), Default::default())]
@@ -61,44 +61,17 @@
 /// CE scores normalized to \[0,1\]. `alpha`: 0 = all CE, 1 = all original.
 #[must_use]
 pub fn refine<I: Clone, M: CrossEncoderModel>(
     model: &M,
     query: &str,
     candidates: &[(I, &str, f32)], // (id, text, original_score)
     alpha: f32,
 ) -> Vec<(I, Score)> {
-    if candidates.is_empty() {
-        return Vec::new();
-    }
-
-    let docs: Vec<&str> = candidates.iter().map(|(_, text, _)| *text).collect();
-    let ce_scores = model.score_batch(query, &docs);
-
-    // Normalize CE scores to [0, 1]
-    let (min_ce, max_ce) = ce_scores
-        .iter()
-        .fold((f32::INFINITY, f32::NEG_INFINITY), |(lo, hi), &s| {
-            (lo.min(s), hi.max(s))
-        });
-    let range = (max_ce - min_ce).max(1e-9);
-
-    let mut results: Vec<(I, Score)> = candidates
-        .iter()
-        .zip(ce_scores)
-        .map(|((id, _, orig), ce)| {
-            let ce_norm = (ce - min_ce) / range;
-            // Use mul_add for better precision
-            let blended = (1.0 - alpha).mul_add(ce_norm, alpha * orig);
-            (id.clone(), blended)
-        })
-        .collect();
-
-    crate::sort_scored_desc(&mut results);
-    results
+    vec![(Default::default(), Default::default())] /* ~ changed by cargo-mutants ~ */
 }
 
 #[cfg(test)]
 mod tests {
     use super::*;
 
     struct MockEncoder;
 


*** /opt/homebrew/bin/cargo test --no-run --verbose --package=rank-refine@0.7.9
       Fresh unicode-ident v1.0.22
       Fresh cfg-if v1.0.4
       Fresh autocfg v1.5.0
       Fresh regex-syntax v0.8.8
       Fresh once_cell v1.21.3
       Fresh either v1.15.0
       Fresh proc-macro2 v1.0.103
       Fresh bitflags v2.10.0
       Fresh fastrand v2.3.0
       Fresh anstyle v1.0.13
       Fresh plotters-backend v0.3.7
       Fresh memchr v2.7.6
       Fresh quote v1.0.42
       Fresh libc v0.2.177
       Fresh crossbeam-utils v0.8.21
       Fresh serde_core v1.0.228
       Fresh ryu v1.0.20
       Fresh clap_lex v0.7.6
       Fresh ciborium-io v0.2.2
       Fresh itoa v1.0.15
       Fresh plotters-svg v0.3.7
       Fresh itertools v0.10.5
       Fresh regex-automata v0.4.13
       Fresh cast v0.3.0
       Fresh quick-error v1.2.3
       Fresh fnv v1.0.7
       Fresh bit-vec v0.8.0
       Fresh same-file v1.0.6
       Fresh syn v2.0.111
       Fresh getrandom v0.3.4
       Fresh errno v0.3.14
       Fresh crossbeam-epoch v0.9.18
       Fresh num-traits v0.2.19
       Fresh serde_json v1.0.145
       Fresh clap_builder v4.5.53
       Fresh wait-timeout v0.2.1
       Fresh walkdir v2.5.0
       Fresh regex v1.12.2
       Fresh criterion-plot v0.5.0
       Fresh is-terminal v0.4.17
       Fresh bit-set v0.8.0
       Fresh oorandom v11.1.5
       Fresh anes v0.1.6
       Fresh unarray v0.1.4
       Dirty rank-refine v0.7.9 (/private/var/folders/dt/jq9nqy8x2wd65h22qb9rptjr0000gn/T/cargo-mutants-rank-refine-9xl7HX.tmp): the file `src/colbert.rs` has changed (1764195508.490820525s, 8s after last build at 1764195500.350441428s)
   Compiling rank-refine v0.7.9 (/private/var/folders/dt/jq9nqy8x2wd65h22qb9rptjr0000gn/T/cargo-mutants-rank-refine-9xl7HX.tmp)
       Fresh zerocopy-derive v0.8.30
       Fresh serde_derive v1.0.228
       Fresh rand_core v0.9.3
       Fresh rustix v1.1.2
       Fresh crossbeam-deque v0.8.6
       Fresh clap v4.5.53
       Fresh plotters v0.3.7
       Fresh zerocopy v0.8.30
       Fresh serde v1.0.228
       Fresh tempfile v3.23.0
       Fresh rayon-core v1.13.0
       Fresh rand v0.9.2
       Fresh rand_xorshift v0.4.0
     Running `rustc --crate-name rank_refine --edition=2021 src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --cfg 'feature="default"' --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values("default", "hierarchical", "kodama"))' -C metadata=a9145a0b8e512428 -C extra-filename=-a97128c91e1742ac --out-dir /private/var/folders/dt/jq9nqy8x2wd65h22qb9rptjr0000gn/T/cargo-mutants-rank-refine-9xl7HX.tmp/target/debug/deps -C incremental=/private/var/folders/dt/jq9nqy8x2wd65h22qb9rptjr0000gn/T/cargo-mutants-rank-refine-9xl7HX.tmp/target/debug/incremental -L dependency=/private/var/folders/dt/jq9nqy8x2wd65h22qb9rptjr0000gn/T/cargo-mutants-rank-refine-9xl7HX.tmp/target/debug/deps`
       Fresh half v2.7.1
       Fresh ppv-lite86 v0.2.21
       Fresh rayon v1.11.0
       Fresh rusty-fork v0.3.1
       Fresh tinytemplate v1.2.1
       Fresh ciborium-ll v0.2.2
       Fresh rand_chacha v0.9.0
       Fresh ciborium v0.2.2
       Fresh proptest v1.9.0
       Fresh criterion v0.5.1
     Running `rustc --crate-name rank_refine --edition=2021 src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --test --cfg 'feature="default"' --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values("default", "hierarchical", "kodama"))' -C metadata=d60e10c1e4de765d -C extra-filename=-66be09a2c0c6ed5c --out-dir /private/var/folders/dt/jq9nqy8x2wd65h22qb9rptjr0000gn/T/cargo-mutants-rank-refine-9xl7HX.tmp/target/debug/deps -C incremental=/private/var/folders/dt/jq9nqy8x2wd65h22qb9rptjr0000gn/T/cargo-mutants-rank-refine-9xl7HX.tmp/target/debug/incremental -L dependency=/private/var/folders/dt/jq9nqy8x2wd65h22qb9rptjr0000gn/T/cargo-mutants-rank-refine-9xl7HX.tmp/target/debug/deps --extern criterion=/private/var/folders/dt/jq9nqy8x2wd65h22qb9rptjr0000gn/T/cargo-mutants-rank-refine-9xl7HX.tmp/target/debug/deps/libcriterion-a8d57b2e80b47536.rlib --extern proptest=/private/var/folders/dt/jq9nqy8x2wd65h22qb9rptjr0000gn/T/cargo-mutants-rank-refine-9xl7HX.tmp/target/debug/deps/libproptest-0cbeba200425c4c9.rlib`
error[E0277]: the trait bound `I: Default` is not satisfied
  --> src/crossencoder.rs:69:11
   |
69 |     vec![(Default::default(), Default::default())] /* ~ changed by cargo-mutants ~ */
   |           ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `I`
   |
help: consider further restricting type parameter `I` with trait `Default`
   |
63 | pub fn refine<I: Clone + std::default::Default, M: CrossEncoderModel>(
   |                        +++++++++++++++++++++++

For more information about this error, try `rustc --explain E0277`.
error: could not compile `rank-refine` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `rustc --crate-name rank_refine --edition=2021 src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --cfg 'feature="default"' --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values("default", "hierarchical", "kodama"))' -C metadata=a9145a0b8e512428 -C extra-filename=-a97128c91e1742ac --out-dir /private/var/folders/dt/jq9nqy8x2wd65h22qb9rptjr0000gn/T/cargo-mutants-rank-refine-9xl7HX.tmp/target/debug/deps -C incremental=/private/var/folders/dt/jq9nqy8x2wd65h22qb9rptjr0000gn/T/cargo-mutants-rank-refine-9xl7HX.tmp/target/debug/incremental -L dependency=/private/var/folders/dt/jq9nqy8x2wd65h22qb9rptjr0000gn/T/cargo-mutants-rank-refine-9xl7HX.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error: could not compile `rank-refine` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `rustc --crate-name rank_refine --edition=2021 src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --test --cfg 'feature="default"' --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values("default", "hierarchical", "kodama"))' -C metadata=d60e10c1e4de765d -C extra-filename=-66be09a2c0c6ed5c --out-dir /private/var/folders/dt/jq9nqy8x2wd65h22qb9rptjr0000gn/T/cargo-mutants-rank-refine-9xl7HX.tmp/target/debug/deps -C incremental=/private/var/folders/dt/jq9nqy8x2wd65h22qb9rptjr0000gn/T/cargo-mutants-rank-refine-9xl7HX.tmp/target/debug/incremental -L dependency=/private/var/folders/dt/jq9nqy8x2wd65h22qb9rptjr0000gn/T/cargo-mutants-rank-refine-9xl7HX.tmp/target/debug/deps --extern criterion=/private/var/folders/dt/jq9nqy8x2wd65h22qb9rptjr0000gn/T/cargo-mutants-rank-refine-9xl7HX.tmp/target/debug/deps/libcriterion-a8d57b2e80b47536.rlib --extern proptest=/private/var/folders/dt/jq9nqy8x2wd65h22qb9rptjr0000gn/T/cargo-mutants-rank-refine-9xl7HX.tmp/target/debug/deps/libproptest-0cbeba200425c4c9.rlib` (exit status: 1)

*** result: Failure(101)
